# Sales

./: README.md  USAGE.md  email_extractor.py  pyproject.toml  requirements.txt  run.py
config/: categories.yaml  config.yaml
src/: __init__.py  database.py  email_extractor.py  get_all_email.py  main.py  main_probe.py  utils.py  utils_data.py  utils_email.py  utils_ktru.py
src_menu/: main.py
src_zak/: main.py
tests/: __init__.py  test_extractor.py
